fix(config): allow env variables for database and skip HTTPS redirect in local dev

--- a/.htaccess
+++ b/.htaccess
@@ -29,8 +29,9 @@ BrowserMatch ^Mozilla/4 gzip-only-text/html
 BrowserMatch ^Mozilla/4\.0[678] no-gzip
 BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
 </IfModule>
-# Redirect to HTTPS
+# Redirect to HTTPS (skip local development)
   RewriteEngine On
+  RewriteCond %{HTTP_HOST} !^(localhost|127\.0\.0\.1|::1)(:\d+)?$ [NC]
   RewriteCond %{HTTP:X-Forwarded-Proto} !https
   RewriteCond %{HTTPS} off
   RewriteCond %{HTTP:CF-Visitor} !{"scheme":"https"}
